fix chart display on mobile

--- a/styles/index.module.css
+++ b/styles/index.module.css
@@ -11,5 +11,6 @@
 	.card {
 		width: 100%;
 		margin: 20px;
+		padding: 30px 10px;
 	}
 }
